[package]
name = "slackline"
version = "0.1.0"
authors = ["ajmwagar <ajmw.subs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
structopt = "0.2"
slack_api = "0.21.0"
csv = "1.1"
